<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="by.alexeytisserand.pmmodel.MainActivity">

    <item
        android:id="@+id/stopwatch"
        android:title=""
        android:orderInCategory="30"
        app:actionViewClass="android.widget.TextView"
        app:showAsAction="always" />
    <item
        android:id="@+id/pauseStop"
        android:orderInCategory="20"
        android:title="@string/stop"
        android:icon="@drawable/ic_pause"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/start"
        android:orderInCategory="10"
        android:title="@string/start"
        android:icon="@drawable/ic_start"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/coordinates"
        android:icon="@drawable/ic_coordinates"
        android:title="@string/coordinates"
        android:checkable="true"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/time_fly"
        android:title="@string/time_fly"
        android:checkable="true"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/trajectory"
        android:icon="@drawable/ic_trajectory"
        android:title="@string/trajectory"
        android:checkable="true"
        app:showAsAction="never"></item>
</menu>